@@ -473,38 +473,17 @@
             <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-surefire-plugin</artifactId>
-              <executions>
-                <execution>
-                  <id>default-test</id>
-                  <phase>test</phase>
-                  <goals>
-                    <goal>test</goal>
-                  </goals>
-                  <configuration combine.self="override">
-                    <forkMode>pertest</forkMode>
-                    <childDelegation>true</childDelegation>
-                    <reportsDirectory>${project.build.directory}/surefire-j9-reports</reportsDirectory>
-<!-- j9 TODO test Assertion failures -->
-<excludes>
-<!--
-  <exclude>**/TestCommitMarkableResourceFailActivate.java</exclude>
-  <exclude>**/TestCommitMarkableResourceFailAfterCommit.java</exclude>
-  <exclude>**/TestCommitMarkableResourceFailAfterPrepare.java</exclude>
-  <exclude>**/TestCommitMarkableResourceFailAfterPrepareTwoXAResources.java</exclude>
-  <exclude>**/TestCommitMarkableResourceMBeansFailAfterPrepare.java</exclude>
-  <exclude>**/CrashAfterResourcesCommitTest.java</exclude>
-  <exclude>**/CrashAfterResourcesCommitTest.java</exclude>
-  <exclude>**/CrashAfterResourcesCommitTest.java</exclude>
-  <exclude>**/XARecoveryModuleHelpersUnitTest.java</exclude>
-  <exclude>**/CMRIntegrationTest.java</exclude>
--->
-</excludes>
-                  </configuration>
-                </execution>
-              </executions>
+              <configuration combine.self="append">
+                  <argLine>--add-exports-private=java.base/java.io=ALL-UNNAMED</argLine>
+              </configuration>
             </plugin>
           </plugins>
         </build>
+        <properties>
+            <server.jvm.args>
+                ${jvm.args.other} ${jvm.args.memory} ${jvm.args.debug} ${jvm.args.jdk9}
+            </server.jvm.args>
+        </properties>
       </profile>
   </profiles>
 </project>
